--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <div id="container">
       <p class="tagline">bowtech-bowen-technique.ro</p>
-      <div id="main" role="main">
+      <div id="main">
         <div class="download-bar">
         <div class="inner">
           <a href="#" class="download-button tar"><span>Download</span></a>
