--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     <div id="container">
       <p class="tagline">bowtech-bowen-technique.ro</p>
       <div id="main">
-        <div class="download-bar">
+        <!--<div class="download-bar">
         <div class="inner">
           <a href="#" class="download-button tar"><span>Download</span></a>
           <a href="#" class="download-button zip"><span>Download</span></a>
           <a href="https://github.com/fitsport/bowtech" class="code">View Bowtech on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
-        </div>
+        </div> -->
         <article class="markdown-body">
           <h3>Welcome to Bowen Technique.</h3>
 
