--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="fitsport" class="avatar"><img src="https://secure.gravatar.com/avatar/e1ba249d7abdf63d7bfb40e786521084?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="fitsport">fitsport</a> maintains <a href="bowtech">Bowtech</a></p>
+      <p><a href="fitsport" class="avatar"><img src="https://secure.gravatar.com/avatar/e1ba249d7abdf63d7bfb40e786521084?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="fitsport">Fitsport</a> - <a href="bowtech">Bowtech</a></p>
 
 
       </div>
       <div class="creds">
-        Web development <a href="http://www.promovis.ro/">Ppromovis</a>
+        Web development <a href="http://www.promovis.ro/">Promovis</a>
       </div>
     </footer>
   </div>
